# mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  train.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/one-pager/: mlops-orchestrator.md
docs/slides/: .gitignore  mlops-orchestrator.md
mlops_orchestrator/: __init__.py
mlops_orchestrator/application/: __init__.py
mlops_orchestrator/application/commands/: __init__.py  batch_prediction_command.py  configure_monitoring_command.py  create_dataset_command.py  deploy_gke_command.py  deploy_vertex_command.py  model_registry_command.py  train_model_command.py
mlops_orchestrator/application/dtos/: dataset_dto.py  deployment_dto.py  training_dto.py
mlops_orchestrator/application/orchestration/: __init__.py  agent_registry.py  dag_orchestrator.py  ml_pipeline_workflow.py  self_healing_workflow.py  swarm_coordinator.py
mlops_orchestrator/application/queries/: cost_query.py  job_status_query.py
mlops_orchestrator/application/session/: session_state.py
mlops_orchestrator/domain/: __init__.py
mlops_orchestrator/domain/entities/: __init__.py  agent.py  batch_prediction_job.py  deployment.py  managed_dataset.py  monitoring_config.py  training_job.py
mlops_orchestrator/domain/events/: __init__.py  dataset_events.py  deployment_events.py  event_base.py  monitoring_events.py  training_events.py
mlops_orchestrator/domain/ports/: __init__.py  alerting_port.py  batch_prediction_port.py  dataset_port.py  deployment_port.py  governance_port.py  infrastructure_ports.py  model_registry_port.py  monitoring_port.py  training_port.py
mlops_orchestrator/domain/services/: __init__.py  compliance_service.py  dataset_service.py  drift_detection_service.py  remediation_service.py
mlops_orchestrator/domain/value_objects/: __init__.py  bq_source.py  compliance.py  cost_metrics.py  drift_result.py  gcs_uri.py  machine_spec.py  model_artifact.py  resource_name.py
mlops_orchestrator/infrastructure/: __init__.py  logging_config.py
mlops_orchestrator/infrastructure/adapters/: alerting_adapters.py  billing_cost_adapter.py  cloud_logging_adapter.py  gke_deployment_adapter.py  in_memory_governance_adapter.py  retry.py  security_adapter.py  stub_batch_prediction_adapter.py  stub_dataset_adapter.py  stub_deployment_adapter.py  stub_infrastructure_adapters.py  stub_model_registry_adapter.py  stub_monitoring_adapter.py  stub_training_adapter.py  vertex_batch_prediction_adapter.py  vertex_dataset_adapter.py  vertex_deployment_adapter.py  vertex_model_registry_adapter.py  vertex_monitoring_adapter.py  vertex_training_adapter.py
mlops_orchestrator/infrastructure/auth/: __init__.py  auth_context.py  auth_middleware.py  sse_auth_middleware.py
(+44 files in other folders)
