[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-orchestrator"
version = "1.0.0"
description = "Agentic MLOps Orchestrator — MCP-native ML lifecycle management with multi-agent swarm intelligence"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-bigquery>=3.14.0",
    "google-cloud-logging>=3.9.0",
    "google-cloud-storage>=2.14.0",
    "kubernetes>=28.0.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.0",
]

[project.scripts]
mlops-orchestrator = "mlops_orchestrator.presentation.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mlops_orchestrator/tests"]

[tool.coverage.run]
source = ["mlops_orchestrator"]
omit = ["mlops_orchestrator/tests/*"]

[tool.coverage.report]
fail_under = 80
