[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-orchestrator"
version = "1.0.0"
description = "Agentic MLOps Orchestrator — MCP-native ML lifecycle management with multi-agent swarm intelligence"
requires-python = ">=3.11"
# Upper bounds are explicit so a major-version bump cannot silently land via
# `pip install`. Dependabot widens these on a controlled cadence.
dependencies = [
    "mcp>=1.0.0,<2.0",
    "pydantic>=2.0,<3.0",
    "google-cloud-aiplatform>=1.40.0,<2.0",
    "google-cloud-bigquery>=3.14.0,<4.0",
    "google-cloud-logging>=3.9.0,<4.0",
    "google-cloud-storage>=2.14.0,<3.0",
    "google-cloud-resource-manager>=1.12.0,<2.0",
    "kubernetes>=28.0.0,<32.0",
    "scipy>=1.12.0,<2.0",
    "numpy>=1.26.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.scripts]
mlops-orchestrator = "mlops_orchestrator.presentation.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<8.0",
]
otel = [
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0",
    "opentelemetry-exporter-otlp>=1.25,<2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mlops_orchestrator/tests"]

[tool.coverage.run]
source = ["mlops_orchestrator"]
omit = [
    "mlops_orchestrator/tests/*",
    "mlops_orchestrator/infrastructure/adapters/vertex_*",
    "mlops_orchestrator/infrastructure/adapters/gke_*",
    "mlops_orchestrator/infrastructure/adapters/cloud_logging_*",
    "mlops_orchestrator/infrastructure/adapters/billing_*",
]

[tool.coverage.report]
fail_under = 80
